js/js.translator/testData/incremental/invalidation/circleExportsUpdate/lib1/f3.kt
fun f3_1() = "f3_1"

fun f3_2() = f1_3()

fun f3_3() = f1_4()
